--- a/index.html
+++ b/index.html
@@ -17,7 +17,18 @@
             src="images/header-logo.svg"></a>
       </header>
       <main class="content">
-        <section class="profile"></section>
+        <section class="profile">
+          <div class="profile__user-card">
+            <img class="profile__avatar" alt="Аватар пользователя Место"
+              src="images/profile__avatar.jpg">
+            <div class="profile__info">
+              <h1 class="profile__name">Изабелла</h1>
+              <button class="profile__edit-button" type="button" title="Редактировать профиль"></button>
+              <p class="profile__description">Экспериментатор</p>
+            </div>
+          </div>
+          <button class="profile__add-button" type="button" title="Добавить новое место"></button>
+        </section>
         <section class="galery"></section>
       </main>
       <footer class="footer"></footer>
