--- a/index.html
+++ b/index.html
@@ -29,7 +29,52 @@
           </div>
           <button class="profile__add-button" type="button" title="Добавить новое место"></button>
         </section>
-        <section class="galery"></section>
+        <section class="galery">
+          <ul class="galery__card-list">
+            <li class="galery__card-item">
+              <img class="galery__card-image" alt="Париж" src="./images/Paris.jpg">
+              <div class="galery__card-description">
+                <h2 class="galery__card-title">Париж, Франция</h2>
+                <button class="galery__card-like-button" type="button" title="Понравилось"></button>
+              </div>
+            </li>
+            <li class="galery__card-item">
+              <img class="galery__card-image" alt="Абиско" src="./images/Abisco.jpg">
+              <div class="galery__card-description">
+                <h2 class="galery__card-title">Абиско, Швеция</h2>
+                <button class="galery__card-like-button" type="button" title="Понравилось"></button>
+              </div>
+            </li>
+            <li class="galery__card-item">
+              <img class="galery__card-image" alt="Копенгаген" src="./images/Kopengagen.jpg">
+              <div class="galery__card-description">
+                <h2 class="galery__card-title">Копенгаген, Дания</h2>
+                <button class="galery__card-like-button" type="button" title="Понравилось"></button>
+              </div>
+            </li>
+            <li class="galery__card-item">
+              <img class="galery__card-image" alt="Брюссель" src="./images/Brussels.jpg">
+              <div class="galery__card-description">
+                <h2 class="galery__card-title">Брюссель, Бельгия</h2>
+                <button class="galery__card-like-button" type="button" title="Понравилось"></button>
+              </div>
+            </li>
+            <li class="galery__card-item">
+              <img class="galery__card-image" alt="Мыс Рока" src="./images/Cabo_da_Roca.jpg">
+              <div class="galery__card-description">
+                <h2 class="galery__card-title">Мыс Рока, Португалия</h2>
+                <button class="galery__card-like-button" type="button" title="Понравилось"></button>
+              </div>
+            </li>
+            <li class="galery__card-item">
+              <img class="galery__card-image" alt="Замок Нойшванштайн" src="./images/Neuschwanstein.jpg">
+              <div class="galery__card-description">
+                <h2 class="galery__card-title">Нойшванштайн, Германия</h2>
+                <button class="galery__card-like-button" type="button" title="Понравилось"></button>
+              </div>
+            </li>
+          </ul>
+        </section>
       </main>
       <footer class="footer"></footer>
     </div>
