--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
           </ul>
         </section>
       </main>
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <h2 class="footer__copyright">&copy; 2023 Mesto Russia</h2>
+      </footer>
     </div>
   </body>
 </html>
