--- a/index.html
+++ b/index.html
@@ -91,15 +91,15 @@
       <footer class="footer">
         <h2 class="footer__copyright">&copy; 2023 Mesto Russia</h2>
       </footer>
-      <section class="popup popup_opened">
+      <section class="popup">
         <div class="popup__container">
           <form class="form">
             <h2 class="form__title">Редактировать профиль</h2>
             <fieldset class="form__input-container">
-              <input class="form__input" type="text" id="profile-name" placeholder="Имя">
-              <input class="form__input" type="text" id="profile-description" placeholder="Описание">
+              <input class="form__input form__input_text_profile_name" type="text" placeholder="Имя">
+              <input class="form__input form__input_text_profile_description" type="text" placeholder="Описание">
             </fieldset>
-            <button class="form__submit-button" type="submit">Сохранить</button>
+            <button class="form__submit-button" type="button">Сохранить</button>
           </form>
           <button class="popup__close-button" type="button" title="Закрыть">
         </div>
