--- a/index.html
+++ b/index.html
@@ -23,65 +23,79 @@
               src="images/profile__avatar.jpg">
             <div class="profile__info">
               <h1 class="profile__name">Изабелла</h1>
-              <button class="profile__edit-button" type="button" title="Редактировать профиль"></button>
+              <button class="profile__edit-button" type="button"
+                title="Редактировать профиль"></button>
               <p class="profile__description">Экспериментатор</p>
             </div>
           </div>
-          <button class="profile__add-button" type="button" title="Добавить новое место"></button>
+          <button class="profile__add-button" type="button" title="Добавить
+            новое место"></button>
         </section>
         <section class="galery">
           <ul class="galery__card-list">
             <li>
               <article class="galery__card-item">
-                <img class="galery__card-image" alt="Париж" src="./images/Paris.jpg">
+                <img class="galery__card-image" alt="Париж"
+                  src="./images/Paris.jpg">
                 <div class="galery__card-description">
                   <h2 class="galery__card-title">Париж, Франция</h2>
-                  <button class="galery__card-like-button" type="button" title="Понравилось"></button>
+                  <button class="galery__card-like-button" type="button"
+                    title="Понравилось"></button>
                 </div>
               </article>
             </li>
             <li>
               <article class="galery__card-item">
-                <img class="galery__card-image" alt="Абиско" src="./images/Abisco.jpg">
+                <img class="galery__card-image" alt="Абиско"
+                  src="./images/Abisco.jpg">
                 <div class="galery__card-description">
                   <h2 class="galery__card-title">Абиско, Швеция</h2>
-                  <button class="galery__card-like-button" type="button" title="Понравилось"></button>
+                  <button class="galery__card-like-button" type="button"
+                    title="Понравилось"></button>
                 </div>
               </article>
             </li>
             <li>
               <article class="galery__card-item">
-                <img class="galery__card-image" alt="Копенгаген" src="./images/Kopengagen.jpg">
+                <img class="galery__card-image" alt="Копенгаген"
+                  src="./images/Kopengagen.jpg">
                 <div class="galery__card-description">
                   <h2 class="galery__card-title">Копенгаген, Дания</h2>
-                  <button class="galery__card-like-button" type="button" title="Понравилось"></button>
+                  <button class="galery__card-like-button" type="button"
+                    title="Понравилось"></button>
                 </div>
               </article>
             </li>
             <li>
               <article class="galery__card-item">
-                <img class="galery__card-image" alt="Брюссель" src="./images/Brussels.jpg">
+                <img class="galery__card-image" alt="Брюссель"
+                  src="./images/Brussels.jpg">
                 <div class="galery__card-description">
                   <h2 class="galery__card-title">Брюссель, Бельгия</h2>
-                  <button class="galery__card-like-button" type="button" title="Понравилось"></button>
+                  <button class="galery__card-like-button" type="button"
+                    title="Понравилось"></button>
                 </div>
               </article>
             </li>
             <li>
               <article class="galery__card-item">
-                <img class="galery__card-image" alt="Мыс Рока" src="./images/Cabo_da_Roca.jpg">
+                <img class="galery__card-image" alt="Мыс Рока"
+                  src="./images/Cabo_da_Roca.jpg">
                 <div class="galery__card-description">
                   <h2 class="galery__card-title">Мыс Рока, Португалия</h2>
-                  <button class="galery__card-like-button" type="button" title="Понравилось"></button>
+                  <button class="galery__card-like-button" type="button"
+                    title="Понравилось"></button>
                 </div>
               </article>
             </li>
             <li>
               <article class="galery__card-item">
-                <img class="galery__card-image" alt="Замок Нойшванштайн" src="./images/Neuschwanstein.jpg">
+                <img class="galery__card-image" alt="Замок Нойшванштайн"
+                  src="./images/Neuschwanstein.jpg">
                 <div class="galery__card-description">
                   <h2 class="galery__card-title">Нойшванштайн, Германия</h2>
-                  <button class="galery__card-like-button" type="button" title="Понравилось"></button>
+                  <button class="galery__card-like-button" type="button"
+                    title="Понравилось"></button>
                 </div>
               </article>
             </li>
@@ -96,15 +110,17 @@
           <form class="form">
             <h2 class="form__title">Редактировать профиль</h2>
             <fieldset class="form__input-container">
-              <input class="form__input form__input_text_profile_name" type="text" placeholder="Имя">
-              <input class="form__input form__input_text_profile_description" type="text" placeholder="Описание">
+              <input class="form__input form__input_text_profile_name"
+                type="text" placeholder="Имя">
+              <input class="form__input form__input_text_profile_description"
+                type="text" placeholder="Описание">
             </fieldset>
             <button class="form__submit-button" type="button">Сохранить</button>
           </form>
           <button class="popup__close-button" type="button" title="Закрыть">
-        </div>
-      </section>
-    </div>
-    <script src="./index.js"></script>
-  </body>
-</html>
+          </div>
+        </section>
+      </div>
+      <script src="./index.js"></script>
+    </body>
+  </html>
