--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
             </fieldset>
             <button class="form__submit-button" type="button">Сохранить</button>
           </form>
-          <button class="popup__close-button" type="button" title="Закрыть">
-          </div>
-        </section>
-      </div>
-      <script src="./index.js"></script>
-    </body>
-  </html>
+          <button class="popup__close-button" type="button" title="Закрыть"></button>
+        </div>
+      </section>
+    </div>
+    <script src="./index.js"></script>
+  </body>
+</html>
