--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               <input class="form__input form__input_text-profile-description"
                 type="text" name="profile-description" placeholder="Описание">
             </fieldset>
-            <button class="form__submit-button" type="submit" form="form-profile">Сохранить</button>
+            <button class="form__submit-button" type="submit">Сохранить</button>
           </form>
           <button class="popup__close-button" type="button" title="Закрыть"></button>
         </div>
