--- a/index.html
+++ b/index.html
@@ -34,67 +34,67 @@
         <section class="galery">
           <ul class="galery__cards">
             <li>
-              <article class="galery__card-item">
-                <img class="galery__card-image" alt="Париж"
+              <article class="card">
+                <img class="card__image" alt="Париж"
                   src="./images/Paris.jpg">
-                <div class="galery__card-description">
-                  <h2 class="galery__card-title">Париж, Франция</h2>
-                  <button class="galery__card-like-button" type="button"
+                <div class="card__description">
+                  <h2 class="card__title">Париж, Франция</h2>
+                  <button class="card__like-button" type="button"
                     title="Понравилось"></button>
                 </div>
               </article>
             </li>
             <li>
-              <article class="galery__card-item">
-                <img class="galery__card-image" alt="Абиско"
+              <article class="card">
+                <img class="card__image" alt="Абиско"
                   src="./images/Abisco.jpg">
-                <div class="galery__card-description">
-                  <h2 class="galery__card-title">Абиско, Швеция</h2>
-                  <button class="galery__card-like-button" type="button"
+                <div class="card__description">
+                  <h2 class="card__title">Абиско, Швеция</h2>
+                  <button class="card__like-button" type="button"
                     title="Понравилось"></button>
                 </div>
               </article>
             </li>
             <li>
-              <article class="galery__card-item">
-                <img class="galery__card-image" alt="Копенгаген"
+              <article class="card">
+                <img class="card__image" alt="Копенгаген"
                   src="./images/Kopengagen.jpg">
-                <div class="galery__card-description">
-                  <h2 class="galery__card-title">Копенгаген, Дания</h2>
-                  <button class="galery__card-like-button" type="button"
+                <div class="card__description">
+                  <h2 class="card__title">Копенгаген, Дания</h2>
+                  <button class="card__like-button" type="button"
                     title="Понравилось"></button>
                 </div>
               </article>
             </li>
             <li>
-              <article class="galery__card-item">
-                <img class="galery__card-image" alt="Брюссель"
+              <article class="card">
+                <img class="card__image" alt="Брюссель"
                   src="./images/Brussels.jpg">
-                <div class="galery__card-description">
-                  <h2 class="galery__card-title">Брюссель, Бельгия</h2>
-                  <button class="galery__card-like-button" type="button"
+                <div class="card__description">
+                  <h2 class="card__title">Брюссель, Бельгия</h2>
+                  <button class="card__like-button" type="button"
                     title="Понравилось"></button>
                 </div>
               </article>
             </li>
             <li>
-              <article class="galery__card-item">
-                <img class="galery__card-image" alt="Мыс Рока"
+              <article class="card">
+                <img class="card__image" alt="Мыс Рока"
                   src="./images/Cabo_da_Roca.jpg">
-                <div class="galery__card-description">
-                  <h2 class="galery__card-title">Мыс Рока, Португалия</h2>
-                  <button class="galery__card-like-button" type="button"
+                <div class="card__description">
+                  <h2 class="card__title">Мыс Рока, Португалия</h2>
+                  <button class="card__like-button" type="button"
                     title="Понравилось"></button>
                 </div>
               </article>
             </li>
             <li>
-              <article class="galery__card-item">
-                <img class="galery__card-image" alt="Замок Нойшванштайн"
+              <article class="card">
+                <img class="card__image" alt="Замок Нойшванштайн"
                   src="./images/Neuschwanstein.jpg">
-                <div class="galery__card-description">
-                  <h2 class="galery__card-title">Нойшванштайн, Германия</h2>
-                  <button class="galery__card-like-button" type="button"
+                <div class="card__description">
+                  <h2 class="card__title">Нойшванштайн, Германия</h2>
+                  <button class="card__like-button" type="button"
                     title="Понравилось"></button>
                 </div>
               </article>
@@ -103,7 +103,7 @@
         </section>
       </main>
       <footer class="footer">
-        <h2 class="footer__copyright">&copy; 2023 Mesto Russia</h2>
+        <p class="footer__copyright">&copy; 2023 Mesto Russia</p>
       </footer>
       <section class="popup">
         <div class="popup__container">
@@ -112,7 +112,7 @@
             <fieldset class="form__input-container">
               <input class="form__input form__input_text-profile_name"
                 type="text" name="profile-name" placeholder="Имя">
-              <input class="form__input form__input_text-profile-description"
+              <input class="form__input form__input_text-profile_description"
                 type="text" name="profile-description" placeholder="Описание">
             </fieldset>
             <button class="form__submit-button" type="submit">Сохранить</button>
