adding initial cards via js

--- a/index.html
+++ b/index.html
@@ -33,72 +33,6 @@
         </section>
         <section class="galery">
           <ul class="galery__cards">
-            <li>
-              <article class="card">
-                <img class="card__image" alt="Париж"
-                  src="./images/Paris.jpg">
-                <div class="card__description">
-                  <h2 class="card__title">Париж, Франция</h2>
-                  <button class="card__like-button" type="button"
-                    title="Понравилось"></button>
-                </div>
-              </article>
-            </li>
-            <li>
-              <article class="card">
-                <img class="card__image" alt="Абиско"
-                  src="./images/Abisco.jpg">
-                <div class="card__description">
-                  <h2 class="card__title">Абиско, Швеция</h2>
-                  <button class="card__like-button" type="button"
-                    title="Понравилось"></button>
-                </div>
-              </article>
-            </li>
-            <li>
-              <article class="card">
-                <img class="card__image" alt="Копенгаген"
-                  src="./images/Kopengagen.jpg">
-                <div class="card__description">
-                  <h2 class="card__title">Копенгаген, Дания</h2>
-                  <button class="card__like-button" type="button"
-                    title="Понравилось"></button>
-                </div>
-              </article>
-            </li>
-            <li>
-              <article class="card">
-                <img class="card__image" alt="Брюссель"
-                  src="./images/Brussels.jpg">
-                <div class="card__description">
-                  <h2 class="card__title">Брюссель, Бельгия</h2>
-                  <button class="card__like-button" type="button"
-                    title="Понравилось"></button>
-                </div>
-              </article>
-            </li>
-            <li>
-              <article class="card">
-                <img class="card__image" alt="Мыс Рока"
-                  src="./images/Cabo_da_Roca.jpg">
-                <div class="card__description">
-                  <h2 class="card__title">Мыс Рока, Португалия</h2>
-                  <button class="card__like-button" type="button"
-                    title="Понравилось"></button>
-                </div>
-              </article>
-            </li>
-            <li>
-              <article class="card">
-                <img class="card__image" alt="Замок Нойшванштайн"
-                  src="./images/Neuschwanstein.jpg">
-                <div class="card__description">
-                  <h2 class="card__title">Нойшванштайн, Германия</h2>
-                  <button class="card__like-button" type="button"
-                    title="Понравилось"></button>
-                </div>
-              </article>
-            </li>
           </ul>
         </section>
       </main>
@@ -121,6 +55,18 @@
         </div>
       </section>
     </div>
+    <template id="card">
+      <li>
+        <article class="card">
+          <img class="card__image" alt="#" src="#">
+          <div class="card__description">
+            <h2 class="card__title"></h2>
+            <button class="card__like-button" type="button"
+              title="Понравилось"></button>
+          </div>
+        </article>
+      </li>
+    </template>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
