--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
             <button class="card__like-button" type="button"
               title="Понравилось"></button>
           </div>
+          <button class="button card__delete-button" type="button" title="Удалить">
         </article>
       </li>
     </template>
