add image popup

--- a/index.html
+++ b/index.html
@@ -69,6 +69,15 @@
           <button class="popup__close-button popup__close-button_add-card" type="button" title="Закрыть"></button>
         </div>
       </section>
+      <section class="popup popup-image">
+        <div class="popup__container">
+          <figure class="popup__image-container">
+            <img class="popup__image" src="#" alt="#">
+            <figcaption class="popup__image-caption"></figcaption>
+          </figure>
+          <button class="popup__close-button popup__close-button_image" type="button" title="Закрыть"></button>
+        </div>
+      </section>
     </div>
     <template id="card">
       <li>
@@ -79,7 +88,7 @@
             <button class="card__like-button" type="button"
               title="Понравилось"></button>
           </div>
-          <button class="button card__delete-button" type="button" title="Удалить">
+          <button class="card__delete-button" type="button" title="Удалить">
         </article>
       </li>
     </template>
