html validator fix

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
             </fieldset>
             <button class="form__submit-button" type="submit">Сохранить</button>
           </form>
-          <button class="popup__close-button popup__close-button_profile" type="button" title="Закрыть"></button>
+          <button class="popup__close-button popup__close-button_profile"
+            type="button" title="Закрыть"></button>
         </div>
       </section>
       <section class="popup popup-add-card">
@@ -62,11 +63,13 @@
               <input class="form__input form__input_text-add-card_name"
                 type="text" name="profile-name" placeholder="Название">
               <input class="form__input form__input_text-add-card_link"
-                type="text" name="profile-description" placeholder="Ссылка на картинку">
+                type="text" name="profile-description" placeholder="Ссылка на
+                картинку">
             </fieldset>
             <button class="form__submit-button" type="submit">Создать</button>
           </form>
-          <button class="popup__close-button popup__close-button_add-card" type="button" title="Закрыть"></button>
+          <button class="popup__close-button popup__close-button_add-card"
+            type="button" title="Закрыть"></button>
         </div>
       </section>
       <section class="popup popup-image">
@@ -75,7 +78,8 @@
             <img class="popup__image" src="#" alt="#">
             <figcaption class="popup__image-caption"></figcaption>
           </figure>
-          <button class="popup__close-button popup__close-button_image" type="button" title="Закрыть"></button>
+          <button class="popup__close-button popup__close-button_image"
+            type="button" title="Закрыть"></button>
         </div>
       </section>
     </div>
@@ -88,7 +92,7 @@
             <button class="card__like-button" type="button"
               title="Понравилось"></button>
           </div>
-          <button class="card__delete-button" type="button" title="Удалить">
+          <button class="card__delete-button" type="button" title="Удалить"></button>
         </article>
       </li>
     </template>
