--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
               <input class="form__input form__input_text-add-card_name"
                 type="text" name="profile-name" placeholder="Название">
               <input class="form__input form__input_text-add-card_link"
-                type="text" name="profile-description" placeholder="Ссылка на
-                картинку">
+                type="text" name="profile-description" placeholder="Ссылка на картинку">
             </fieldset>
             <button class="form__submit-button" type="submit">Создать</button>
           </form>
