--- a/index.html
+++ b/index.html
@@ -45,9 +45,11 @@
             <p class="form__title">Редактировать профиль</p>
             <fieldset class="form__input-container">
               <input class="form__input form__input_text-profile_name"
-                type="text" name="profile-name" placeholder="Имя" required>
+                type="text" name="profile-name" placeholder="Имя" required
+                minlength="2" maxlength="40">
               <input class="form__input form__input_text-profile_description"
-                type="text" name="profile-description" placeholder="Описание" required>
+                type="text" name="profile-description" placeholder="Описание"
+                required minlength="2" maxlength="200">
             </fieldset>
             <button class="form__submit-button" type="submit">Сохранить</button>
           </form>
@@ -61,9 +63,11 @@
             <p class="form__title">Новое место</p>
             <fieldset class="form__input-container">
               <input class="form__input form__input_text-add-card_name"
-                type="text" name="profile-name" placeholder="Название" required>
+                type="text" name="profile-name" placeholder="Название" required
+                minlength="2" maxlength="30">
               <input class="form__input form__input_text-add-card_link"
-                type="url" name="profile-description" placeholder="Ссылка на картинку" required>
+                type="url" name="profile-description" placeholder="Ссылка на
+                картинку" required>
             </fieldset>
             <button class="form__submit-button" type="submit">Создать</button>
           </form>
@@ -96,6 +100,7 @@
       </li>
     </template>
     <script src="./scripts/constants.js"></script>
+    <!-- <script src="./scripts/validate.js"></script> -->
     <script src="./scripts/index.js"></script>
   </body>
 </html>
