html & css validations

--- a/index.html
+++ b/index.html
@@ -44,12 +44,18 @@
           <form class="form form-profile" name="form-profile">
             <p class="form__title">Редактировать профиль</p>
             <fieldset class="form__input-container">
-              <input class="form__input form__input_text-profile_name"
-                type="text" name="profile-name" placeholder="Имя" required
-                minlength="2" maxlength="40">
-              <input class="form__input form__input_text-profile_description"
-                type="text" name="profile-description" placeholder="Описание"
-                required minlength="2" maxlength="200">
+              <label class="form__field">
+                <input class="form__input form__input_text-profile_name"
+                  type="text" name="profile-name" placeholder="Имя" required
+                  minlength="2" maxlength="40">
+                <span class="form__input-error profile-name-error"></span>
+              </label>
+              <label class="form__field">
+                <input class="form__input form__input_text-profile_description"
+                  type="text" name="profile-description" placeholder="Описание"
+                  required minlength="2" maxlength="200">
+                <span class="form__input-error profile-description-error">Error is here</span>
+              </label>
             </fieldset>
             <button class="form__submit-button" type="submit">Сохранить</button>
           </form>
@@ -62,12 +68,17 @@
           <form class="form form-add-card" name="form-add-card">
             <p class="form__title">Новое место</p>
             <fieldset class="form__input-container">
-              <input class="form__input form__input_text-add-card_name"
-                type="text" name="profile-name" placeholder="Название" required
-                minlength="2" maxlength="30">
-              <input class="form__input form__input_text-add-card_link"
-                type="url" name="profile-description" placeholder="Ссылка на
-                картинку" required>
+              <label class="form__field">
+                <input class="form__input form__input_text-add-card_name"
+                  type="text" name="profile-name" placeholder="Название" required
+                  minlength="2" maxlength="30">
+                <span class="form__input-error card-name-error"></span>
+              </label>
+              <label class="form__field">
+                <input class="form__input form__input_text-add-card_link"
+                  type="url" name="profile-description" placeholder="Ссылка&nbspна&nbspкартинку" required>
+                <span class="form__input-error card-description-error"></span>
+              </label>
             </fieldset>
             <button class="form__submit-button" type="submit">Создать</button>
           </form>
@@ -100,7 +111,7 @@
       </li>
     </template>
     <script src="./scripts/constants.js"></script>
-    <!-- <script src="./scripts/validate.js"></script> -->
+    <script src="./scripts/validate.js"></script>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
