--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               <label class="form__field">
                 <input class="form__input form__input_text-add-card_link"
                   type="url" name="profile-description"
-                  placeholder="Ссылка&nbspна&nbspкартинку" required
+                  placeholder="Ссылка&nbsp;на&nbsp;картинку" required
                   id="card-description">
                 <span class="form__input-error card-description-error"></span>
               </label>
@@ -116,7 +116,7 @@
       </li>
     </template>
     <script src="./scripts/constants.js"></script>
-    <script src="./scripts/validate.js"></script>
     <script src="./scripts/index.js"></script>
+    <script src="./scripts/validate.js"></script>
   </body>
 </html>
