--- a/src/index.html
+++ b/src/index.html
@@ -45,13 +45,13 @@
             <fieldset class="form__input-container">
               <label class="form__field">
                 <input class="form__input form__input_text-profile_name"
-                  type="text" name="profile-name" placeholder="Имя" required
+                  type="text" name="name" placeholder="Имя" required
                   minlength="2" maxlength="40" id="profile-name">
                 <span class="form__input-error profile-name-error"></span>
               </label>
               <label class="form__field">
                 <input class="form__input form__input_text-profile_description"
-                  type="text" name="profile-description" placeholder="Описание"
+                  type="text" name="description" placeholder="Описание"
                   required minlength="2" maxlength="200"
                   id="profile-description">
                 <span class="form__input-error profile-description-error">Error
@@ -71,14 +71,14 @@
             <fieldset class="form__input-container">
               <label class="form__field">
                 <input class="form__input form__input_text-add-card_name"
-                  type="text" name="profile-name" placeholder="Название"
+                  type="text" name="name" placeholder="Название"
                   required
                   minlength="2" maxlength="30" id="card-name">
                 <span class="form__input-error card-name-error"></span>
               </label>
               <label class="form__field">
                 <input class="form__input form__input_text-add-card_link"
-                  type="url" name="profile-description"
+                  type="url" name="link"
                   placeholder="Ссылка&nbsp;на&nbsp;картинку" required
                   id="card-description">
                 <span class="form__input-error card-description-error"></span>
