--- a/src/index.html
+++ b/src/index.html
@@ -138,8 +138,11 @@
           <img class="card__image" alt="#" src="#">
           <div class="card__description">
             <h2 class="card__title"></h2>
-            <button class="card__like-button" type="button"
-              title="Понравилось"></button>
+            <div class="card__like-container">
+              <button class="card__like-button" type="button"
+                title="Понравилось"></button>
+                <p class="card__like-count"></p>
+            </div>
           </div>
           <button class="card__delete-button" type="button" title="Удалить"></button>
         </article>
